MNT: Re-rendered with conda-build 3.18.9, conda-smithy 3.6.0, and conda-forge-pinning 2019.10.11

--- a/.ci_support/win_c_compilervs2008cxx_compilervs2008vc9.yaml
+++ b/.ci_support/win_c_compilervs2008cxx_compilervs2008vc9.yaml
@@ -7,8 +7,12 @@ channel_targets:
 cxx_compiler:
 - vs2008
 pin_run_as_build:
+  sqlite:
+    max_pin: x
   vc:
     max_pin: x
+sqlite:
+- '3'
 vc:
 - '9'
 zip_keys:
