add venv tests on windows

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -107,6 +107,7 @@ test:
     - 2to3 -h
     - pydoc -h
     - python3-config --help  # [not win]
+    - python -m venv %%TEMP%%\venv  # [win]
 
 about:
   home: http://www.python.org/
