Stop vendoring binutils linker

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -64,7 +64,7 @@ source:
     sha256: de3c87b26a80e789986d8e6950c6304175d3829afe9c6c7211eb7257266ab0ac         # [win]
 
 build:
-  number: 1
+  number: 2
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
@@ -87,6 +87,7 @@ requirements:
   host:
     # - nasm 2.11.06      # [win]
     - bzip2             # [not win]
+    - ld_impl_{{ target_platform }}  # [linux]
     - sqlite
     - xz                # [not win]
     - zlib              # [not win]
@@ -97,6 +98,7 @@ requirements:
     - libffi            # [not win]
   run:
     - bzip2             # [not win]
+    - ld_impl_{{ target_platform }}  # [linux]
     - sqlite
     - xz                # [not win]
     - zlib              # [not win]
