add DLL search path patch for windows
add 0020-add-conda-paths-to-DLL-search-path-on-windows.patch
which makes the necessary modification to the DLL search path on Windows
so that the conda directories are searched. Update other patches.
Patch 0019 needs to be combined with 0020, for the time being it is
skipped.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,9 @@ source:
       - patches/0017-Unvendor-sqlite3.patch
       # https://bugs.python.org/issue35644
       - patches/0018-venv-Revert-a-change-from-https-github.com-python-cp.patch
-      - patches/0019-Add-CondaEcosystemModifyDllSearchPath.patch
+      # TODO combine 0019 and 0020
+      #- patches/0019-Add-CondaEcosystemModifyDllSearchPath.patch
+      - patches/0020-add-conda-paths-to-DLL-search-path-on-windows.patch
   # TODO :: Depend on our own packages for these:
   - url: https://github.com/python/cpython-source-deps/archive/xz-5.2.2.zip          # [win]
     folder: externals/xz-5.2.2                                                       # [win]
