Try to get windows going

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -101,6 +101,8 @@ requirements:
     - tk                # [not win]
     - ncurses           # [not win]
     - libffi            # [not win]
+    - vs2017_runtime    # [win]
+    - vc                # [win]
   run:
     - sqlite
     - xz                # [not win]
