Revert "try VS2015 with PGO"
This reverts commit 0c529aaf4b675ef6320dc42510a43d9f12cc1130.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -102,6 +102,7 @@ requirements:
     - tk                # [not win]
     - ncurses           # [not win]
     - libffi            # [not win]
+    - vc                # [win]
   run:
     - sqlite
     - xz                # [not win]
