require ripgrep for tests on linux64 and osx

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -113,6 +113,8 @@ requirements:
     - libffi            # [not win]
 
 test:
+  requirements:
+    - ripgrep   # [linux64 and osx]
   commands:
     - python -V
     - python3 -V            # [not win]
