don't py_compile the 2to3 test inputs
py_compile hard crashes when any input fails to compile, so we need to skip around these, see
https://bugs.python.org/issue38731.
I don't think we should be compiling these anyway, so this isn't a loss (IMO)

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -70,7 +70,7 @@ source:
 
 
 build:
-  number: 3
+  number: 4
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
@@ -78,6 +78,8 @@ build:
   script_env:
     - python_branding
   skip: true  # [win and vc != '14.1']
+  skip_compile_pyc:
+    - lib/python3.*/lib2to3/tests/data/*.py  # [py>=30]
   # We delete the shared libraries.
   ignore_run_exports:   # [unix]
     - bzip2             # [unix]
