--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -65,7 +65,7 @@ source:
 
 
 build:
-  number: 1008
+  number: 1009
   no_link:
     - bin/python2.7     # [unix]
     - DLLs/_ctypes.pyd  # [win]
@@ -93,6 +93,11 @@ requirements:
     - tk                                 # [unix]
     - ncurses                            # [unix]
     - libffi                             # [unix]
+    - ld_impl_{{ target_platform }}      # [linux and not aarch64]
+    - binutils_impl_{{ target_platform }}   # [aarch64]
+  run:
+    - ld_impl_{{ target_platform }}         # [linux and not aarch64]
+    - binutils_impl_{{ target_platform }}   # [aarch64]
 
 test:
   commands:
