--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -64,7 +64,7 @@ source:
     sha256: de3c87b26a80e789986d8e6950c6304175d3829afe9c6c7211eb7257266ab0ac         # [win]
 
 build:
-  number: 1
+  number: 2
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
@@ -95,6 +95,8 @@ requirements:
     - tk                # [not win]
     - ncurses           # [linux]
     - libffi            # [not win]
+    - ld_impl_{{target_platform}}        # [linux and not aarch64]
+    - binutils_impl_{{target_platform}}  # [aarch64]
   run:
     - bzip2             # [not win]
     - sqlite
@@ -105,6 +107,8 @@ requirements:
     - tk                # [not win]
     - ncurses           # [linux]
     - libffi            # [not win]
+    - ld_impl_{{target_platform}}        # [linux and not aarch64]
+    - binutils_impl_{{target_platform}}  # [aarch64]
 
 test:
   commands:
