--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -82,7 +82,7 @@ source:
 
 
 build:
-  number: 1006
+  number: 1007
   # Windows has issues updating python if conda is using files itself.
   # Copy rather than link.
   no_link:
@@ -114,8 +114,12 @@ requirements:
     - tk                                 # [unix]
     - ncurses                            # [unix]
     - libffi                             # [unix]
+    - ld_impl_{{ target_platform }}      # [linux and not aarch64]
+    - binutils_impl_{{ target_platform }}   # [aarch64]
   run:
     - ncurses                            # [unix]
+    - ld_impl_{{ target_platform }}      # [linux and not aarch64]
+    - binutils_impl_{{ target_platform }}   # [aarch64]
 
 
 test:
