--- a/.ci_support/win_target_platformwin-64.yaml
+++ b/.ci_support/win_target_platformwin-64.yaml
@@ -1,11 +1,11 @@
 c_compiler:
-- vs2015
+- vs2017
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- vs2015
+- vs2017
 openssl:
 - 1.1.1a
 pin_run_as_build:
@@ -13,15 +13,10 @@ pin_run_as_build:
     max_pin: x.x.x
   sqlite:
     max_pin: x
-  vc:
-    max_pin: x
 sqlite:
 - '3'
 target_platform:
 - win-64
-vc:
-- '14'
 zip_keys:
-- - vc
-  - c_compiler
+- - c_compiler
   - cxx_compiler
